2012-06-10 Kevin Polulak <kpolulak@gmail.com>
	* Makefile: Added -Wnonnull switch to $CC_WARN variable since a few new
	functions in src/debugger.c use __attribute__((nonnull)).

	* include/debugger.h: Added eh_interp_t struct for describing info about
	the interpreter. Modified *eh_cmd_func_t() to take a eh_interp_t* pointer
	as the first parameter. Also reordered where several struct definitions
	appear so that everything is declared first before it is referenced.

	* src/debugger.c: Created several new functions including:
		+ Static
			* runloop(): Executes main "get-command-run-command" runloop.
			* get_cmd(): Prompts user to enter command.
			* run_cmd(): Executes *eh_cmd_func_t() associated with given command.
			* parse_cmd(): Parses input for valid command and arguments.
			* skip_whitespace(): Called by parse_cmd() to get next argument.
		+ Non-static
			* egghead_dbg_init(): Initializes interpreter and starts runloop.

	* src/main.c: Added support for new --debugger that invokes the debugger
	by calling egghead_dbg_init().

2012-06-09 Kevin Polulak <kpolulak@gmail.com>
	* include/debugger.h: New file. Contains structures and definitions needed
	by the upcoming debugger.

	* src/debugger.c: New file. Debugger implementation. Currently contains
	only a small dispatch table and empty "skeleton" functions for `help` and
	`quit` commands.

2012-06-06 Kevin Polulak <kpolulak@gmail.com>
	* Makefile: Added -std=c99 to CFLAGS.

	* include/egghead.h: Created new eh_opts_t structure for managing
	command-line switches that affect interpretation. Also changed
	egghead_eval_char() and egghead_eval_file() to accept a structure of this
	type as a parameter.

	* src/egghead.c: In egghead_eval_char(), included 'default' case in main
	'switch' statement to cause an error when new --strict switch is given.

	* src/main.c: Created new default_options() static function for populating
	main eh_opts_t structure with the default configuration. Also added code